map populated by using user's current location recyclerview setup at recommendation activity cleanup other minor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="fullname">Full Name</string>
+    <string name="preferences">Preferences</string>
 </resources>
