--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="password">Password</string>
     <string name="fullname">Full Name</string>
     <string name="preferences">Preferences</string>
+    <string name="opening">Opening Hours:</string>
 </resources>
