31-07-2018 few changes chat UI Vat and SC merged Delivery added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="submit">Submit</string>
     <string name="fooditem">Food Item</string>
     <string name="price">Price</string>
+    <string name="delivery">Delivery</string>
+    <string name="messagehint">Type your message</string>
 </resources>
