18-08-2018 lots of changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="emailprayog"><u>ppaudel93@gmail.com</u></string>
     <string name="emailshreyam"><u>shreyam1008@gmail.com</u></string>
     <string name="abouttheproject">Project Link:</string>
+    <string name="chat">Chat</string>
     <string name="githubandroid">https://github.com/ppaudel93/Bhoodie_new</string>
     <string name="githubserver">https://github.com/shreyam1008/foody</string>
 
